--- a/index.html
+++ b/index.html
@@ -12,22 +12,39 @@
     <div class="flex h-full">
 
         <!-- Sidebar -->
-        <aside id="sidebar" class="w-64 bg-gray-800 p-4 space-y-6 overflow-y-auto hidden lg:block">
-            <h2 class="text-xl font-bold text-gray-100">ZeroMonk</h2>
-            <nav class="space-y-4">
-                <a href="#" class="flex items-center space-x-2 hover:text-white">
-                    <span>🧠</span>
-                    <span>Chat</span>
-                </a>
-                <a href="#" class="flex items-center space-x-2 hover:text-white">
-                    <span>🔐</span>
-                    <span>Ethical AI</span>
-                </a>
-                <a href="#" class="flex items-center space-x-2 hover:text-white">
-                    <span>🌍</span>
-                    <span>Explore Tools</span>
-                </a>
-            </nav>
+        <aside id="sidebar" class="w-64 bg-gray-800 p-4 space-y-6 flex flex-col overflow-y-auto relative">
+            <!-- Top Section -->
+            <div>
+                <h2 class="text-xl font-bold text-gray-100">ZeroMonk</h2>
+                
+                <!-- Discovery Button -->
+                <div class="flex justify-center mt-6">
+                    <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
+                        🚀 Discovery
+                    </button>
+                </div>
+
+                <!-- Navigation Links -->
+                <nav class="space-y-4 mt-6">
+                    <a href="#" class="flex items-center space-x-2 hover:text-white">
+                        <span>🧠</span>
+                        <span>Chat</span>
+                    </a>
+                    <a href="#" class="flex items-center space-x-2 hover:text-white">
+                        <span>🔐</span>
+                        <span>Ethical AI</span>
+                    </a>
+                    <a href="#" class="flex items-center space-x-2 hover:text-white">
+                        <span>🌍</span>
+                        <span>Explore Tools</span>
+                    </a>
+                </nav>
+            </div>
+
+            <!-- Footer Section -->
+            <button class="w-full bg-gray-700 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition absolute bottom-4 left-4 right-4">
+                👤 Account
+            </button>
         </aside>
 
         <!-- Chat Container -->
@@ -59,40 +76,6 @@
         </main>
     </div>
 
-    <script>
-        const sendMessageButton = document.getElementById("send-btn");
-        const userInputField = document.getElementById("user-input");
-        const chatWindow = document.getElementById("chat-window");
-
-        sendMessageButton.addEventListener("click", async () => {
-            const userMessage = userInputField.value;
-
-            if (!userMessage) return; // Don't send if input is empty
-
-            // Append user message to chat window
-            chatWindow.innerHTML += `<div class="bg-blue-500 text-white p-2 rounded-lg">You: ${userMessage}</div>`;
-            userInputField.value = ""; // Clear input field
-
-            // Send user message to the server
-            try {
-                const response = await fetch("http://localhost:3000/chat", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                    },
-                    body: JSON.stringify({ message: userMessage }),
-                });
-                const data = await response.json();
-
-                // Append bot reply to chat window
-                chatWindow.innerHTML += `<div class="bg-gray-600 text-white p-2 rounded-lg">Bot: ${data.reply}</div>`;
-                chatWindow.scrollTop = chatWindow.scrollHeight; // Scroll to the latest message
-            } catch (error) {
-                console.error("Error:", error);
-                chatWindow.innerHTML += `<div class="bg-red-500 text-white p-2 rounded-lg">Bot: Something went wrong!</div>`;
-            }
-        });
-    </script>
-
+    <script src="script.js"></script>
 </body>
 </html>
