--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <div class="flex h-full flex-col md:flex-row">
 
         <!-- Sidebar -->
-        <aside id="sidebar" 
-            class="w-full md:w-64 bg-gray-800 p-4 space-y-6 flex flex-col overflow-y-auto md:relative">
-            
-            <!-- Top Section -->
-            <div>
-                <h2 class="text-xl font-bold text-gray-100 text-center md:text-left">ZeroMonk</h2>
+        <!-- Sidebar -->
+<aside id="sidebar" 
+    class="w-full md:w-64 bg-gray-800 p-4 space-y-6 flex flex-col overflow-y-auto md:relative h-full">
+    
+    <!-- Top Section -->
+    <div>
+        <h2 class="text-xl font-bold text-gray-100 text-center md:text-left">ZeroMonk</h2>
 
-                <!-- Discovery Button -->
-                <div class="flex justify-center md:justify-start mt-6">
-                    <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
-                        🚀 Discovery
-                    </button>
-                </div>
-            </div>
-
-            <!-- Footer Section -->
-            <button 
-                class="w-full bg-gray-700 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition mt-auto">
-                👤 Account
+        <!-- Discovery Button -->
+        <div class="flex justify-center md:justify-start mt-6">
+            <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
+                🚀 Discovery
             </button>
-        </aside>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <button 
+        class="w-full bg-gray-700 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition mt-auto">
+        👤 Account
+    </button>
+</aside>
 
         <!-- Chat Container -->
         <main class="flex-1 flex flex-col p-4 md:p-6">
