--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
         <!-- Sidebar -->
         <aside id="sidebar" 
-            class="w-full md:w-64 bg-gray-800 p-4 space-y-6 flex flex-col overflow-y-auto md:relative h-full">
+            class="w-full md:w-64 bg-gray-800 p-4 flex flex-col justify-between overflow-y-auto md:relative h-full">
             
-            <!-- Top Section -->
+            <!-- Header Section -->
             <div>
                 <h2 class="text-xl font-bold text-gray-100 text-center md:text-left">ZeroMonk</h2>
+            </div>
 
-                <!-- Discovery Button -->
-                <div class="flex justify-center md:justify-start mt-6">
-                    <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
-                        🚀 Discovery
-                    </button>
-                </div>
+            <!-- Discovery Button at the bottom of the header -->
+            <div class="flex justify-center md:justify-start mt-6 mb-6">
+                <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
+                    🚀 Discovery
+                </button>
             </div>
 
             <!-- Footer Section -->
             <button 
-                class="w-full bg-gray-700 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition mt-auto">
+                class="w-full bg-gray-700 text-white py-2 px-4 rounded-md hover:bg-gray-600 transition">
                 👤 Account
             </button>
         </aside>
