--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- ZeroSchool Title -->
                 <h2 class="text-2xl font-bold text-gray-100 text-center">ZeroSchool</h2>
 
-                <!-- Discovery Button below ZeroSchool -->
+                <!-- Discovery Button -->
                 <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
                     🚀 Discovery
                 </button>
@@ -69,32 +69,74 @@
         </main>
     </div>
 
+    <!-- JavaScript -->
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const input = document.getElementById("user-input");
-            const sendBtn = document.getElementById("send-btn");
-            const chatWindow = document.getElementById("chat-window");
+        const userInput = document.getElementById("user-input");
+        const sendBtn = document.getElementById("send-btn");
+        const chatWindow = document.getElementById("chat-window");
 
-            // Function to send a message
-            const sendMessage = () => {
-                const message = input.value.trim();
-                if (message !== "") {
-                    const msgElement = document.createElement("div");
-                    msgElement.className = "p-2 bg-gray-700 rounded-lg text-gray-300 self-end";
-                    msgElement.textContent = message;
+        // Simulated AI responses
+        const aiResponses = [
+            "Hello! How can I assist you today?",
+            "That's an interesting question! Let me think about that.",
+            "I’m here to help! Can you clarify your question?",
+            "Could you provide more details?",
+            "I appreciate your curiosity. Let's dive deeper into that.",
+            "Let me process that for a moment..."
+        ];
 
-                    chatWindow.appendChild(msgElement);
-                    chatWindow.scrollTop = chatWindow.scrollHeight; // Auto-scroll
-                    input.value = ""; // Clear input
-                }
-            };
+        // Function to generate AI response
+        function generateAIResponse() {
+            const randomIndex = Math.floor(Math.random() * aiResponses.length);
+            return aiResponses[randomIndex];
+        }
 
-            // Event Listeners
-            sendBtn.addEventListener("click", sendMessage);
-            input.addEventListener("keypress", (e) => {
-                if (e.key === "Enter") sendMessage();
-            });
+        // Function to display a message in the chat window
+        function displayMessage(sender, message) {
+            const messageDiv = document.createElement("div");
+            messageDiv.classList.add("p-2", "rounded-lg", "w-fit", "max-w-md", "break-words", "my-1");
+
+            if (sender === "user") {
+                messageDiv.classList.add("bg-blue-600", "text-white", "ml-auto", "text-right");
+            } else {
+                messageDiv.classList.add("bg-gray-700", "text-gray-300", "mr-auto", "text-left");
+            }
+
+            messageDiv.textContent = message;
+            chatWindow.appendChild(messageDiv);
+
+            // Auto-scroll to bottom
+            chatWindow.scrollTop = chatWindow.scrollHeight;
+        }
+
+        // Function to handle sending a message
+        function handleSendMessage() {
+            const userMessage = userInput.value.trim();
+
+            if (userMessage) {
+                // Display user's message
+                displayMessage("user", userMessage);
+
+                // Clear the input field
+                userInput.value = "";
+
+                // Simulate AI response with a delay
+                setTimeout(() => {
+                    const aiMessage = generateAIResponse();
+                    displayMessage("ai", aiMessage);
+                }, 1000);
+            }
+        }
+
+        // Event listeners
+        sendBtn.addEventListener("click", handleSendMessage);
+
+        userInput.addEventListener("keypress", (event) => {
+            if (event.key === "Enter") {
+                handleSendMessage();
+            }
         });
     </script>
 </body>
 </html>
+
