--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Top Section -->
             <div class="flex flex-col items-center space-y-4">
                 <!-- ZeroSchool Title -->
-                <h2 class="text-2xl font-bold text-gray-100 text-center">ZeroSchool</h2>
+                <h2 class="text-2xl font-bold text-gray-100 text-center">zeroSchool</h2>
 
                 <!-- Discovery Button -->
                 <button class="bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition">
